# AI-Engineering-Projects

./: .gitignore  API_notes.ipynb  LICENSE  PostgreSQL.ipynb  Tool_Use_and_Integrations.ipynb
05-tool-calling-agent/: README.md
AI_Learning_API/: README.md  main.py
AI_Project_Planner/: .env.example  .gitignore  PROJECT_TREE.txt  README.md  pyproject.toml  requirements.txt
AI_Project_Planner/src/ai_project_planner/: __init__.py  crew.py  main.py  schemas.py
AI_Project_Planner/src/ai_project_planner/config/: agents.yaml  tasks.yaml
AI_Project_Planner/src/ai_project_planner/tools/: __init__.py
AI_Project_Planner/tests/: test_schemas.py
EcoPrompt/: .env.example  README.md  config.yaml  requirements.txt  runs.csv
EcoPrompt/Recipe_Builder/: README.md  models.py  recipe_agent.py  requirements.txt  tools.py
EcoPrompt/artifacts/: runs.csv
EcoPrompt/data/: prompts.jsonl
EcoPrompt/scripts/: report.py  run_experiment.py
EcoPrompt/src/: config.py  scale.py  (+9 more)
Facebook_Post_Generator_Crew/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Facebook_Post_Generator_Crew/src/facebook_post_crew/: __init__.py  agents.py  main.py  tasks.py
Facebook_Post_Generator_Crew/src/facebook_post_crew/tools/: __init__.py  facebook_search_tool.py
HR_AI_Assistant_V2/: .env  .env.example  .gitignore  HR_AI_Assistant_V2_Documentation.md  README.md  app.py  generate_doc.py  requirements.txt
HR_AI_Assistant_V3_MultiAgent/: .env.example  .gitignore  README.md  app.py  config.py  mcp_server.py  requirements.txt
NirapodPay_MFS_Complaint_Copilot_Full/: .env.example  .gitignore  PROJECT_TREE.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt
NirapodPay_MFS_Complaint_Copilot_Full/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
NirapodPay_MFS_Complaint_Copilot_Full/app/routers/: api.py
NirapodPay_MFS_Complaint_Copilot_Full/app/services/: complaint_orchestrator.py  llm_service.py  masking.py  rules_engine.py  transaction_service.py  vector_store.py
NirapodPay_MFS_Complaint_Copilot_Full/app/static/: app.js  styles.css
NirapodPay_MFS_Complaint_Copilot_Full/app/templates/: index.html
NirapodPay_MFS_Complaint_Copilot_Full/data/: knowledge_base.json
NirapodPay_MFS_Complaint_Copilot_Full/tests/: test_masking.py  test_rules_engine.py  test_vector_store.py
Recipe_Builder/: README.md  main.py
(+2538 files in other folders)
