[project]
name = "ai-project-planner"
version = "0.1.0"
description = "A schema-driven CrewAI application that turns an AI engineering idea into an implementation-ready project plan."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==1.15.2",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[project.scripts]
ai_project_planner = "ai_project_planner.main:run"
run_crew = "ai_project_planner.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_project_planner"]

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
