[project]
name = "facebook-post-crew"
version = "0.1.0"
description = "A CrewAI multi-agent workflow that researches a product and creates Facebook post copy plus visual concepts."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.4,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.0,<3.0.0",
]

[project.scripts]
facebook-post-crew = "facebook_post_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/facebook_post_crew"]

[tool.crewai]
type = "crew"
