[project]
name = "mfs-complaint-copilot"
version = "0.1.0"
description = "MFS complaint-resolution chatbot with deterministic routing and local vector retrieval."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.8,<3",
    "sqlalchemy>=2.0,<3",
    "openai>=2.0,<3",
    "scikit-learn>=1.6,<2",
    "numpy>=2.0,<3",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.20,<1",
    "httpx>=0.28,<1"
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
